@@ -165,4 +165,4 @@ issue 230: [similar to former issue 9]
 issue 235:
     bug: tools are CONSUMED when using them
 
-[236-237]
+[236-238]
